--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,6 @@ Depends: R (>= 2.10), KEGGgraph, org.Hs.eg.db
 Imports: Rgraphviz, graph, png, AnnotationDbi, KEGGREST, methods, utils
 Suggests: gage, org.Mm.eg.db, RUnit, BiocGenerics
 License: GPL (>=3.0)
-URL: http://pathview.r-forge.r-project.org/; http://bioinformatics.oxfordjournals.org/content/29/14/1830.full
+URL:  http://pathview.r-forge.r-project.org/,
+      http://bioinformatics.oxfordjournals.org/content/29/14/1830.full
 LazyLoad: yes
