--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: pathview
 Type: Package
 Title: a tool set for pathway based data integration and visualization
-Version: 1.1.6
-Date: 2013-9-3
+Version: 1.1.7
+Date: 2013-9-27
 Author: Weijun Luo
 Maintainer: Weijun Luo <luo_weijun@yahoo.com>
 Description: Pathview is a tool set for pathway based data integration
@@ -22,6 +22,5 @@ Depends: R (>= 2.10), KEGGgraph, org.Hs.eg.db
 Imports: Rgraphviz, graph, png, AnnotationDbi, KEGGREST, methods, utils
 Suggests: gage, org.Mm.eg.db, RUnit, BiocGenerics
 License: GPL (>=3.0)
-URL:  http://pathview.r-forge.r-project.org/,
-      http://bioinformatics.oxfordjournals.org/content/29/14/1830.full
+URL:  http://pathview.r-forge.r-project.org/
 LazyLoad: yes
