--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: pathview
 Type: Package
 Title: a tool set for pathway based data integration and visualization
-Version: 1.5.0
+Version: 1.5.1
 Date: 2014-4-8
 Author: Weijun Luo
 Maintainer: Weijun Luo <luo_weijun@yahoo.com>
@@ -14,10 +14,9 @@ Description: Pathview is a tool set for pathway based data integration
         with the mapped data. In addition, Pathview also seamlessly
         integrates with pathway and gene set (enrichment) analysis tools for
         large-scale and fully automated analysis.
-biocViews: Pathways, GraphsAndNetworks, NetworkVisualization,
+biocViews: Pathways, GraphsAndNetwork, Visualization,
         GeneSetEnrichment, DifferentialExpression, GeneExpression,
-        Microarray, RNAseq, Genetics, Metabolomics, Proteomics,
-        Bioinformatics
+        Microarray, RNASeq, Genetics, Metabolomics, Proteomics
 Depends: R (>= 2.10), KEGGgraph, org.Hs.eg.db
 Imports: Rgraphviz, graph, png, AnnotationDbi, KEGGREST, methods, utils
 Suggests: gage, org.Mm.eg.db, RUnit, BiocGenerics
