--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,13 @@ import(
        Rgraphviz,
        KEGGREST,
        methods,
-       XML,
        graph
        )
 
 importFrom(png, readPNG)
 importFrom(AnnotationDbi, mget)
 importFrom(utils, data, installed.packages)
-#importFrom(graph, addNode, combineNodes, degree)
-
+importFrom(XML, xmlAttrs, xmlChildren, xmlName, xmlRoot, xmlTreeParse)
 
 export(
        download.kegg,
@@ -19,7 +17,7 @@ export(
        combineKEGGnodes, reaction2edge,
 
        node.map,
-       eg2id, id2eg,
+       eg2id, id2eg, geneannot.map,
        cpdkegg2name, cpdname2kegg, cpd2kegg, cpdidmap,
        kegg.species.code,
        mol.sum,
